📚 Auto-update: News data refreshed - 2025-12-23 12:21 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -26846,5 +26846,101 @@
         "published": "Tue, 23 Dec 2025 10:57:05 +0000",
         "source": "MEDIANAMA",
         "summary": "<p>Italy has fined Apple \u20ac98.6 million over its App Tracking Transparency policy, alleging that it abused its dominant position in the mobile app market and harmed third-party developers.</p>\n<p>The post <a href=\"https://www.medianama.com/2025/12/223-apple-fined-italy-app-tracking/\">Italy Regulator Fines Apple For Shielding Users From Online Tracking: What This Means</a> appeared first on <a href=\"https://www.medianama.com\">MEDIANAMA</a>.</p>"
+    },
+    {
+        "id": "https://www.wired.com/review/ibuypower-rdy-slate-9mp-r01/",
+        "title": "iBuyPower RDY Slate 9MP R01 Gaming PC Review: Great Value",
+        "link": "https://www.wired.com/review/ibuypower-rdy-slate-9mp-r01/",
+        "published": "Tue, 23 Dec 2025 12:00:00 +0000",
+        "source": "WIRED",
+        "summary": "iBuyPower\u2019s prebuilt gaming desktop tries some new tricks but comes with a few flaws."
+    },
+    {
+        "id": "https://www.wired.com/story/google-and-openais-chatbots-can-strip-women-in-photos-down-to-bikinis/",
+        "title": "Google\u2019s and OpenAI\u2019s Chatbots Can Strip Women in Photos Down to Bikinis",
+        "link": "https://www.wired.com/story/google-and-openais-chatbots-can-strip-women-in-photos-down-to-bikinis/",
+        "published": "Tue, 23 Dec 2025 11:30:00 +0000",
+        "source": "WIRED",
+        "summary": "Users of AI image generators are offering each other instructions on how to use the tech to alter pictures of women into realistic, revealing deepfakes."
+    },
+    {
+        "id": "https://www.engadget.com/general/the-morning-after-engadget-newsletter-121545111.html?src=rss",
+        "title": "The Morning After: The best games of 2025",
+        "link": "https://www.engadget.com/general/the-morning-after-engadget-newsletter-121545111.html?src=rss",
+        "published": "Tue, 23 Dec 2025 12:15:45 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>As many of us hunker down for the holidays, you might want to tackle some of the <a href=\"https://www.engadget.com/gaming/engadgets-favorite-games-of-2025-153000109.html\">best games we\u2019ve seen this year</a>: the long-time-coming <em>Silksong</em>, the critically acclaimed (and sumptuous) <em>Expedition 33</em> and the bizarre world of <em>Baby Steps.</em></p>\n<a href=\"https://www.engadget.com/gaming/engadgets-favorite-games-of-2025-153000109.html\"><figure><img alt=\"TMA\" src=\"https://s.yimg.co"
+    },
+    {
+        "id": "https://www.engadget.com/wearables/how-to-set-up-an-apple-watch-for-a-child-120051230.html?src=rss",
+        "title": "How to set up an Apple Watch for a child",
+        "link": "https://www.engadget.com/wearables/how-to-set-up-an-apple-watch-for-a-child-120051230.html?src=rss",
+        "published": "Tue, 23 Dec 2025 12:00:51 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Giving a child an Apple Watch can offer extra peace of mind and tools that promote independence in a controlled way. Apple\u2019s Family Setup feature makes it possible for a kid to use an Apple Watch without owning an iPhone, and the feature set has expanded thanks to recent watchOS updates. It supports communication controls, location tools, Schooltime limits and privacy protections that allow a parent or guardian to manage how the device is used throughout the day.</p>\n<p>The setup process begi"
+    },
+    {
+        "id": "https://boringsql.com/posts/instant-database-clones/",
+        "title": "Instant database clones with PostgreSQL 18",
+        "link": "https://boringsql.com/posts/instant-database-clones/",
+        "published": "Tue, 23 Dec 2025 07:58:25 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46363360\">Comments</a>"
+    },
+    {
+        "id": "https://glaze.cs.uchicago.edu/what-is-glaze.html",
+        "title": "What Is (AI) Glaze?",
+        "link": "https://glaze.cs.uchicago.edu/what-is-glaze.html",
+        "published": "Tue, 23 Dec 2025 11:07:42 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46364338\">Comments</a>"
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/artificial-intelligence/ai-data-centers-are-forcing-obsolete-peaker-power-plants-back-into-service/articleshow/126141115.cms",
+        "title": "AI data centers are forcing obsolete 'peaker' power plants back into service",
+        "link": "https://economictimes.indiatimes.com/tech/artificial-intelligence/ai-data-centers-are-forcing-obsolete-peaker-power-plants-back-into-service/articleshow/126141115.cms",
+        "published": "Tue, 23 Dec 2025 17:25:55 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "A analysis of filings with the country's biggest power grid shows that about 60% of oil, gas and coal power plants slated for retirement in PJM postponed or cancelled those plans this year. Most of the plants averting shutdowns are peaker units."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/startups/oyo-parent-prism-gets-shareholders-nod-for-rs-6650-crore-ipo/articleshow/126141125.cms",
+        "title": "Oyo parent Prism gets shareholders\u2019 nod for Rs 6,650 crore IPO",
+        "link": "https://economictimes.indiatimes.com/tech/startups/oyo-parent-prism-gets-shareholders-nod-for-rs-6650-crore-ipo/articleshow/126141125.cms",
+        "published": "Tue, 23 Dec 2025 14:36:21 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Oyo's parent company, Prism, has secured shareholder backing for its initial public offering.  The company plans to raise up to Rs 6,650 crore through fresh equity shares.  Shareholders also approved a bonus share issuance.  These approvals are significant steps towards Prism's public listing.  Recent financial performance shows strong profit and revenue growth for Oyo."
+    },
+    {
+        "id": "https://yourstory.com/2025/12/rampur-burkha-manufacturing-entrepreneur-yojana",
+        "title": "Inside a Rampur Workshop Supplying Burkhas Across UP and Uttarakhand",
+        "link": "https://yourstory.com/2025/12/rampur-burkha-manufacturing-entrepreneur-yojana",
+        "published": "Tue, 23 Dec 2025 11:36:02 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "A family tailoring legacy becomes a regional supply business across Uttar Pradesh and Uttarakhand, aided by a state entrepreneurship scheme."
+    },
+    {
+        "id": "https://inc42.com/buzz/naxatra-labs-bags-3-mn-to-accelerate-ev-motor-production/",
+        "title": "Naxatra Labs Bags $3 Mn To Accelerate EV Motor Production",
+        "link": "https://inc42.com/buzz/naxatra-labs-bags-3-mn-to-accelerate-ev-motor-production/",
+        "published": "Tue, 23 Dec 2025 11:43:03 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"Naxatra Labs Bags $3 Mn To Accelerate EV Motor Production\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2024/12/ftr-2-1.png\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />EV motors manufacturer Naxatra Labs has raised $3 Mn (INR 26.86 Cr) in a Pre-Series A round led by Zerodha\u2019s&#8230;"
+    },
+    {
+        "id": "https://inc42.com/buzz/upi-in-november-paytm-continues-to-add-market-share/",
+        "title": "UPI In November: Paytm Continues To Add Market Share",
+        "link": "https://inc42.com/buzz/upi-in-november-paytm-continues-to-add-market-share/",
+        "published": "Tue, 23 Dec 2025 11:16:52 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"UPI In November: Paytm Continues to Add Market Share\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/12/UPI-SEBI-featured-1-1-1-1.png\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />Vijay Shekhar Sharma-led fintech company Paytm continued its momentum in the UPI market in November, with its market share rising&#8230;"
+    },
+    {
+        "id": "https://www.medianama.com/2025/12/223-annas-archive-leaks-300tb-spotify-music-data-ai-training-pirated-content/",
+        "title": "Anna\u2019s Archive Leaks 300TB Spotify Music Data, Exposing AI Training Concern from Pirated Content",
+        "link": "https://www.medianama.com/2025/12/223-annas-archive-leaks-300tb-spotify-music-data-ai-training-pirated-content/",
+        "published": "Tue, 23 Dec 2025 11:22:42 +0000",
+        "source": "MEDIANAMA",
+        "summary": "<p>Anna's Archive revealed that it had backed up large parts of Spotify's catalogue and distributed it through bulk torrents, raising concerns that AI companies can use the pirated content to train AI models. </p>\n<p>The post <a href=\"https://www.medianama.com/2025/12/223-annas-archive-leaks-300tb-spotify-music-data-ai-training-pirated-content/\">Anna\u2019s Archive Leaks 300TB Spotify Music Data, Exposing AI Training Concern from Pirated Content</a> appeared first on <a href=\"https://www.medianama.co"
     }
 ]
