--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -26942,5 +26942,101 @@
         "published": "Tue, 23 Dec 2025 11:22:42 +0000",
         "source": "MEDIANAMA",
         "summary": "<p>Anna's Archive revealed that it had backed up large parts of Spotify's catalogue and distributed it through bulk torrents, raising concerns that AI companies can use the pirated content to train AI models. </p>\n<p>The post <a href=\"https://www.medianama.com/2025/12/223-annas-archive-leaks-300tb-spotify-music-data-ai-training-pirated-content/\">Anna\u2019s Archive Leaks 300TB Spotify Music Data, Exposing AI Training Concern from Pirated Content</a> appeared first on <a href=\"https://www.medianama.co"
+    },
+    {
+        "id": "https://www.theverge.com/policy/845838/2025-year-end-government-doge",
+        "title": "The year the government broke",
+        "link": "https://www.theverge.com/policy/845838/2025-year-end-government-doge",
+        "published": "2025-12-23T08:00:00-05:00",
+        "source": "The Verge",
+        "summary": "The first crack showed right before Inauguration Day. The year before, Congress had overwhelmingly passed a bill banning TikTok unless it broke ties with its Chinese parent company. The Supreme Court unanimously upheld it, and it was clear what needed to happen next: either the president could give TikTok another 90 days to complete a [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/news/849528/apple-italy-antitrust-fine-att-app-privacy",
+        "title": "Apple fined $116 million over app privacy prompts",
+        "link": "https://www.theverge.com/news/849528/apple-italy-antitrust-fine-att-app-privacy",
+        "published": "2025-12-23T07:46:56-05:00",
+        "source": "The Verge",
+        "summary": "Apple has been fined more than &#8364;98 million (about $116 million) by Italy's antitrust regulator over the \"excessively burdensome\" privacy rules it imposes on third-party apps. The Italian Competition Authority (AGCM) says that Apple abused its dominant app store market position by burdening developers with \"disproportionate\" terms around data collection that exceed privacy law requirements, [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/story/how-to-buy-the-right-laptop-for-you/",
+        "title": "Laptop Buying Guide (2025): How to Choose the Right PC (Step-by-Step Guide)",
+        "link": "https://www.wired.com/story/how-to-buy-the-right-laptop-for-you/",
+        "published": "Tue, 23 Dec 2025 13:00:00 +0000",
+        "source": "WIRED",
+        "summary": "Shopping for a laptop can be infuriating. Here\u2019s how to sift through the acronyms, storage options, and extra features to find the best one for you."
+    },
+    {
+        "id": "https://arstechnica.com/gadgets/2025/12/the-splay-is-a-subpar-monitor-but-an-exciting-portable-projector/",
+        "title": "The Splay is a subpar monitor but an exciting portable projector",
+        "link": "https://arstechnica.com/gadgets/2025/12/the-splay-is-a-subpar-monitor-but-an-exciting-portable-projector/",
+        "published": "Tue, 23 Dec 2025 12:30:06 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "Splay can be a monitor and takes a lot of the stress out of projectors, too."
+    },
+    {
+        "id": "https://www.engadget.com/the-best-gifts-cards-to-give-this-holiday-season-amazon-apple-best-buy-and-others-110032592.html?src=rss",
+        "title": "The best gifts cards to give this holiday season: Amazon, Apple, Best Buy and others",
+        "link": "https://www.engadget.com/the-best-gifts-cards-to-give-this-holiday-season-amazon-apple-best-buy-and-others-110032592.html?src=rss",
+        "published": "Tue, 23 Dec 2025 13:00:35 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>This late in the game, it\u2019s not possible to ship gifts to friends and family and have them arrive before the holidays. But that\u2019s ok because it\u2019s never been easier to give a digital gift that will arrive basically whenever you want it to. If you\u2019re looking for more creative<a href=\"https://www.engadget.com/holiday-gifts-digital-and-subscription-gifts-160041638.html\"> digital gift ideas</a>, we\u2019ve got you covered. But right now, you may just be looking for the best gift card ideas that you can"
+    },
+    {
+        "id": "https://www.engadget.com/gaming/xbox/2025-was-the-year-xbox-died-130000467.html?src=rss",
+        "title": "2025 was the year Xbox died",
+        "link": "https://www.engadget.com/gaming/xbox/2025-was-the-year-xbox-died-130000467.html?src=rss",
+        "published": "Tue, 23 Dec 2025 13:00:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Want to see a dead body? I present to you the Xbox. After a subdued launch at the height of the COVID pandemic in 2020, the <a class=\"link\" href=\"https://www.engadget.com/xbox-series-x-review-microsoft-140045437-140045623.html\" target=\"_blank\">Xbox Series X</a> quickly lost the fight against the <a class=\"link\" href=\"https://www.engadget.com/gaming/playstation-5-slim-review-131542271.html\" target=\"_blank\">PlayStation 5</a>. Microsoft simply couldn't deliver enough compelling games, despite <a"
+    },
+    {
+        "id": "https://www.engadget.com/big-tech/ces-2026-everything-were-expecting-from-techs-biggest-conference-in-january-120000106.html?src=rss",
+        "title": "CES 2026: Everything we're expecting from tech's biggest conference in January",
+        "link": "https://www.engadget.com/big-tech/ces-2026-everything-were-expecting-from-techs-biggest-conference-in-january-120000106.html?src=rss",
+        "published": "Tue, 23 Dec 2025 12:28:43 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>As we hurtle towards the end of the year, the shadow of CES hovers on the horizon. Tech\u2019s biggest annual conference is starting in just under two weeks, and we already know some of the products and announcements that could be in store. The CES 2026 show floor is officially open from January 6 through 9, but the fun kicks off with events on Sunday January 4 and a host of press conferences on Monday. As always, product demos, announcements and networking will be happening at the Las Vegas Conve"
+    },
+    {
+        "id": "https://blog.glyphdrawing.club/font-with-built-in-syntax-highlighting/",
+        "title": "Font with Built-In Syntax Highlighting (2024)",
+        "link": "https://blog.glyphdrawing.club/font-with-built-in-syntax-highlighting/",
+        "published": "Tue, 23 Dec 2025 10:28:09 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46364131\">Comments</a>"
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/funding/ev-motor-startup-naxatra-labs-raises-3-million-led-by-zerodhas-rainmatter-angel-investors/articleshow/126141968.cms",
+        "title": "EV motor startup Naxatra Labs raises $3 million led by Zerodha's Rainmatter, angel investors",
+        "link": "https://economictimes.indiatimes.com/tech/funding/ev-motor-startup-naxatra-labs-raises-3-million-led-by-zerodhas-rainmatter-angel-investors/articleshow/126141968.cms",
+        "published": "Tue, 23 Dec 2025 18:13:41 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "The round also saw participation from several marque startup founders, operators, and angel investors, including Mohit Tandon of Delhivery, Himanshu Aggarwal of Aspiring Minds, Vijay Shekhar Sharma of Paytm, Aloke Bajpai of Ixigo, Anupam Jalote of iCEM, Narayan of Ather Energy, Soumitra Sharma of Operators Studio, and Hemant Daga of Neo Assets, among others."
+    },
+    {
+        "id": "https://yourstory.com/2025/12/balrampur-kusumlata-boutique",
+        "title": "How Kusumlata Singh Built a Home-Based Boutique in Balrampur",
+        "link": "https://yourstory.com/2025/12/balrampur-kusumlata-boutique",
+        "published": "Tue, 23 Dec 2025 11:35:17 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "After pandemic closures, a home-based boutique bounces back with modern machines and word-of-mouth demand."
+    },
+    {
+        "id": "https://inc42.com/buzz/defence-electronics-firm-coreel-technologies-raises-30-mn/",
+        "title": "Defence Electronics Firm CoreEL Technologies Raises $30 Mn",
+        "link": "https://inc42.com/buzz/defence-electronics-firm-coreel-technologies-raises-30-mn/",
+        "published": "Tue, 23 Dec 2025 12:45:52 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"Govt Sets Up 5 Labs To Research On New-Age Innovations For Defence\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2020/01/Untitled-design-2020-01-03T125115.281.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />Bengaluru-based aerospace and defence technology company CoreEL Technologies has raised $30 Mn (about INR 268 Cr) in its Series B&#8230;"
+    },
+    {
+        "id": "https://inc42.com/features/inside-indias-28-bn-agritech-opportunity-and-the-rise-of-ai-powered-farming/",
+        "title": "Inside India\u2019s $28 Bn+ Agritech Opportunity And The Rise Of AI-Powered Farming",
+        "link": "https://inc42.com/features/inside-indias-28-bn-agritech-opportunity-and-the-rise-of-ai-powered-farming/",
+        "published": "Tue, 23 Dec 2025 12:30:09 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"Inside India\u2019s $28 Bn+ Agritech Opportunity And The Rise Of AI-Powered Farming\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1081\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/12/FTR-100-12.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1361\" />India\u2019s economic momentum has few parallels globally. Even as major economies slow, India is expected to remain the fastest-growing large&#8230;"
     }
 ]
