📚 Auto-update: News data refreshed - 2025-12-23 14:12 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -27038,5 +27038,53 @@
         "published": "Tue, 23 Dec 2025 12:30:09 +0000",
         "source": "Inc42 Media",
         "summary": "<img alt=\"Inside India\u2019s $28 Bn+ Agritech Opportunity And The Rise Of AI-Powered Farming\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1081\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/12/FTR-100-12.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1361\" />India\u2019s economic momentum has few parallels globally. Even as major economies slow, India is expected to remain the fastest-growing large&#8230;"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/23/the-tooth-fairy-just-got-reimagined-for-the-tech-savvy-generation/",
+        "title": "The tooth fairy just got reimagined for the tech-savvy generation",
+        "link": "https://techcrunch.com/2025/12/23/the-tooth-fairy-just-got-reimagined-for-the-tech-savvy-generation/",
+        "published": "Tue, 23 Dec 2025 14:00:00 +0000",
+        "source": "TechCrunch",
+        "summary": "Move over, Santa. Now there\u2019s another magical character for kids to track: the Tooth Fairy. After making a personalized Tooth Fairy video for his nephew, Oliver Finel noticed a gap. While there are plenty of Santa trackers, nothing similar existed for the Tooth Fairy. Recognizing that Generation Alpha is growing up with interactive online experiences [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/tech/845958/ai-smart-home-broken",
+        "title": "How AI broke the smart home in 2025",
+        "link": "https://www.theverge.com/tech/845958/ai-smart-home-broken",
+        "published": "2025-12-23T08:30:00-05:00",
+        "source": "The Verge",
+        "summary": "This morning, I asked my Alexa-enabled Bosch coffee machine to make me a coffee. Instead of running my routine, it told me it couldn't do that. Ever since I upgraded to Alexa Plus, Amazon's generative-AI-powered voice assistant, it has failed to reliably run my coffee routine, coming up with a different excuse almost every time [&#8230;]"
+    },
+    {
+        "id": "https://www.engadget.com/mobile/apples-ios-263-will-introduce-proximity-pairing-to-third-party-devices-in-the-eu-133037696.html?src=rss",
+        "title": "Apple's iOS 26.3 will introduce proximity pairing to third-party devices in the EU",
+        "link": "https://www.engadget.com/mobile/apples-ios-263-will-introduce-proximity-pairing-to-third-party-devices-in-the-eu-133037696.html?src=rss",
+        "published": "Tue, 23 Dec 2025 13:30:37 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Apple is making it a little easier to use third-party devices with iPhones in order to comply with Europe's Digital Market Act (DMA), <a href=\"https://www.macrumors.com/2025/12/22/ios-26-3-dma-airpods-pairing/\"><em>MacRumors</em></a> reported. For iOS 26.3, Apple's devices will support third-party proximity pairing and notifications in Europe only, according to the latest beta notes. That will make it a bit easier to connect devices like Sony headphones or receive notifications from an iPhone"
+    },
+    {
+        "id": "https://alperenkeles.com/posts/test-dont-verify/",
+        "title": "Test, Don't (Just) Verify",
+        "link": "https://alperenkeles.com/posts/test-dont-verify/",
+        "published": "Tue, 23 Dec 2025 12:56:50 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46364973\">Comments</a>"
+    },
+    {
+        "id": "https://github.com/pytorch/executorch",
+        "title": "Executorch: On-device AI across mobile, embedded and edge for PyTorch",
+        "link": "https://github.com/pytorch/executorch",
+        "published": "Thu, 18 Dec 2025 13:51:11 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46312621\">Comments</a>"
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/newsletters/tech-top-5/beyond-1-crore-whatsapp-bans-oyo-reattempts-path-to-ipo/articleshow/126142523.cms",
+        "title": "Beyond 1 crore WhatsApp bans; Oyo's third attempt at IPO",
+        "link": "https://economictimes.indiatimes.com/tech/newsletters/tech-top-5/beyond-1-crore-whatsapp-bans-oyo-reattempts-path-to-ipo/articleshow/126142523.cms",
+        "published": "Tue, 23 Dec 2025 19:06:23 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "The government wants to know more about accounts banned by WhatsApp in India. This and more in today\u2019s ETtech Top 5."
     }
 ]
