📚 Auto-update: News data refreshed - 2025-12-23 15:12 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -27086,5 +27086,61 @@
         "published": "Tue, 23 Dec 2025 19:06:23 +0530",
         "source": "Tech-Economic Times",
         "summary": "The government wants to know more about accounts banned by WhatsApp in India. This and more in today\u2019s ETtech Top 5."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/23/inside-uzbekistans-nationwide-license-plate-surveillance-system/",
+        "title": "Inside Uzbekistan\u2019s nationwide license plate surveillance system",
+        "link": "https://techcrunch.com/2025/12/23/inside-uzbekistans-nationwide-license-plate-surveillance-system/",
+        "published": "Tue, 23 Dec 2025 15:05:49 +0000",
+        "source": "TechCrunch",
+        "summary": "The Uzbek government's national license plate scanning system was discovered exposed to the internet for anyone to access without a password."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/23/pirate-group-annas-archive-says-it-has-scraped-86-million-songs-from-spotify/",
+        "title": "Pirate group Anna\u2019s Archive says it has scraped 86 million songs from Spotify",
+        "link": "https://techcrunch.com/2025/12/23/pirate-group-annas-archive-says-it-has-scraped-86-million-songs-from-spotify/",
+        "published": "Tue, 23 Dec 2025 14:51:40 +0000",
+        "source": "TechCrunch",
+        "summary": "Spotify says it has identified and disabled the user accounts involved in the scraping."
+    },
+    {
+        "id": "https://www.zdnet.com/article/amazon-fire-tv-omni-qled-review/",
+        "title": "I tested Amazon's latest 65-inch Fire TV, and it dethroned my LG in surprising ways",
+        "link": "https://www.zdnet.com/article/amazon-fire-tv-omni-qled-review/",
+        "published": "Tue, 23 Dec 2025 14:57:00 GMT",
+        "source": "Latest news",
+        "summary": "Amazon's latest QLED Omni Series TV may just be the best mix of quality and affordability."
+    },
+    {
+        "id": "https://www.zdnet.com/article/how-to-learn-chatgpt-fast-free/",
+        "title": "How to master ChatGPT basics in under an hour - with my favorite free resources",
+        "link": "https://www.zdnet.com/article/how-to-learn-chatgpt-fast-free/",
+        "published": "Tue, 23 Dec 2025 14:31:00 GMT",
+        "source": "Latest news",
+        "summary": "Want to learn ChatGPT fast? Here are the top videos and guides I recommend - and they're all free."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/et-money-pivots-to-wealth-management-subscriptions-regular-mutual-funds-ends-free-offerings/articleshow/126143565.cms",
+        "title": "ET Money pivots to wealth management subscriptions, regular mutual funds; ends free offerings",
+        "link": "https://economictimes.indiatimes.com/tech/technology/et-money-pivots-to-wealth-management-subscriptions-regular-mutual-funds-ends-free-offerings/articleshow/126143565.cms",
+        "published": "Tue, 23 Dec 2025 20:11:37 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "For high value users, the fintech will offer ET Money Private, where investors will have access to a wealth expert."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/servicenow-to-buy-cybersecurity-startup-armis-for-7-75-billion/articleshow/126143229.cms",
+        "title": "ServiceNow to buy cybersecurity startup Armis for $7.75 billion",
+        "link": "https://economictimes.indiatimes.com/tech/technology/servicenow-to-buy-cybersecurity-startup-armis-for-7-75-billion/articleshow/126143229.cms",
+        "published": "Tue, 23 Dec 2025 19:41:30 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "ServiceNow is acquiring cybersecurity firm Armis for $7.75 billion. This move aims to bolster ServiceNow's AI platform with Armis' device scanning and threat detection capabilities. The acquisition is expected to be finalized in the latter half of 2026. ServiceNow has recently made several other strategic acquisitions to expand its offerings."
+    },
+    {
+        "id": "https://inc42.com/buzz/india-nz-conclude-fta-to-bolster-fintech-collaboration/",
+        "title": "India, NZ Conclude FTA To Bolster Fintech Collaboration",
+        "link": "https://inc42.com/buzz/india-nz-conclude-fta-to-bolster-fintech-collaboration/",
+        "published": "Tue, 23 Dec 2025 14:27:09 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"India, NZ Conclude FTA To Bolster Fintech Collaboration\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/12/Indi-NZ-FTA-notice-featured.png\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />India and New Zealand will work together to strengthen strategic collaboration in the fintech space under the recently concluded free&#8230;"
     }
 ]
